Line spacing fix

--- a/week-3/styles.css
+++ b/week-3/styles.css
@@ -5,7 +5,7 @@ ul li:nth-child(4) {
 
 ol li:nth-child(2),
 ol li:nth-child(4) {
-        font-size: 24px;
+    font-size: 24px;
 }
 
 div {
@@ -17,6 +17,7 @@ div {
 
 div p {
     margin: 0;
+    line-height: 1.5;
 }
 
 div p:first-child {
@@ -35,6 +36,7 @@ button {
     background-color: blanchedalmond;
     border: 1px solid black;
     border-radius: 15px;
+    margin-top: 12px;
 }
 
 button:hover {
